# master_rust

./: .gitignore  Cargo.toml  PLAN.md  README.md  info.toml
exercises/01_intro/: intro1.rs  intro2_print.rs  intro3_variables.rs  intro4_mutability.rs  intro5_shadowing.rs  intro6_constants.rs  intro7_types.rs  intro_quiz.rs
exercises/02_types/: types1_integers.rs  types2_floats.rs  types3_bool_char.rs  types4_tuples.rs  types5_arrays.rs  types_quiz.rs
exercises/03_flow/: flow_quiz.rs  fn1_basic.rs  fn2_expressions.rs  fn3_if.rs  fn4_loops.rs  fn5_early_return.rs
exercises/04_ownership/: own1_move.rs  own2_clone.rs  own3_functions.rs  own4_borrow.rs  own5_mut_borrow.rs  own6_slice.rs  own7_dangling.rs  own_quiz.rs
exercises/05_strings/: str1_owned_vs_borrowed.rs  str2_create.rs  str3_concat.rs  str4_iterate.rs  str5_split_join.rs  str6_parse.rs  str_quiz.rs
exercises/06_collections/: collections_quiz.rs  map1_create.rs  map2_entry.rs  vec1_create.rs  vec2_index_get.rs  vec3_mutate.rs  vec4_iterate.rs  vec5_slicing.rs
exercises/07_iterators/: iter1_basics.rs  iter2_map_filter.rs  iter3_fold_sum.rs  iter4_collect.rs  iter5_zip_enumerate.rs  iter6_find_any_all.rs  iter7_flat_map.rs  iter8_custom.rs  iter_quiz.rs
exercises/08_errors/: errors_quiz.rs  opt1_basics.rs  opt2_match.rs  opt3_combinators.rs  res1_basics.rs  res2_question_mark.rs  res3_combinators.rs  res4_from.rs
exercises/09_structs/: struct1_define.rs  struct2_tuple.rs  struct3_unit.rs  struct4_impl.rs  struct5_associated.rs  struct6_update.rs  (+1 more)
scripts/: verify_chapter.sh
src/: main.rs
(+225 files in other folders)
